traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: value unary_! is not a member of Unit
  while(!positionFinale()){
        ^Snake:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:25: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:29: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:35: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:39: error: too many arguments for method gauche: ()Unit
      gauche(2)
            ^Snake:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:41: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:42: error: too many arguments for method droite: ()Unit
      droite(2)
            ^Snake:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:44: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^